--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
   "dependencies": {
     "@liveblocks/client": "^2.7.2",
     "@liveblocks/react": "^2.7.2",
+    "@liveblocks/react-comments": "^1.12.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "fabric": "^6.4.2",
+    "lucide-react": "^0.445.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
